--- a/.settings/edu.umd.cs.findbugs.core.prefs
+++ b/.settings/edu.umd.cs.findbugs.core.prefs
@@ -1,5 +1,5 @@
 #SpotBugs User Preferences
-#Fri Oct 30 11:59:51 CET 2020
+#Tue Nov 23 17:38:37 CET 2021
 detectorExplicitSerialization=ExplicitSerialization|true
 detectorMultithreadedInstanceAccess=MultithreadedInstanceAccess|true
 detectorConfusionBetweenInheritedAndOuterMethod=ConfusionBetweenInheritedAndOuterMethod|true
@@ -77,6 +77,7 @@ detectorFindUncalledPrivateMethods=FindUncalledPrivateMethods|true
 detectorNumberConstructor=NumberConstructor|true
 detectorDontAssertInstanceofInTests=DontAssertInstanceofInTests|true
 detectorFindFinalizeInvocations=FindFinalizeInvocations|true
+detectorFindBadEndOfStreamCheck=FindBadEndOfStreamCheck|true
 detectorFindNullDerefsInvolvingNonShortCircuitEvaluation=FindNullDerefsInvolvingNonShortCircuitEvaluation|true
 detectorDontIgnoreResultOfPutIfAbsent=DontIgnoreResultOfPutIfAbsent|true
 detectorFindUnconditionalWait=FindUnconditionalWait|true
